using System;
using System.Collections.Generic;
using UnityEngine;

namespace WaterConveyorSort.LevelData
{
    [CreateAssetMenu(fileName = "LevelData", menuName = "Water Conveyor Sort/Level Data")]
    public sealed class LevelDataSO : ScriptableObject
    {
        [SerializeField] private ColorDataSO colorData;
        [SerializeField] private BoardData board = new BoardData();
        [SerializeField] private PathData path = new PathData();
        [SerializeField] private List<BuoyNodeData> buoyNodes = new List<BuoyNodeData>();
        [SerializeField, Min(1)] private int maxStackInStackQueue = 3;
        [Tooltip("Maximum number of groups on the conveyor, including loading reservations.")]
        [SerializeField, Min(1)] private int maxBuoyInConveyor = 5;
        [SerializeField] private MaxBuoyCounterTxtData maxBuoyCounterTxt = new MaxBuoyCounterTxtData();

        public ColorDataSO ColorData => colorData;
        public BoardData Board => board;
        public PathData Path => path;
        public IReadOnlyList<BuoyNodeData> BuoyNodes => buoyNodes;
        public int MaxStackInStackQueue => Mathf.Max(1, maxStackInStackQueue);
        public int MaxBuoyInConveyor => Mathf.Max(1, maxBuoyInConveyor);
        public MaxBuoyCounterTxtData MaxBuoyCounterTxt => maxBuoyCounterTxt;
    }

    [Serializable]
    public sealed class MaxBuoyCounterTxtData
    {
        [SerializeField] private bool enabled;
        [SerializeField] private Vector2Int gridPosition;
        public bool Enabled => enabled;
        public Vector2Int GridPosition => gridPosition;
    }

    [Serializable]
    public sealed class BoardData
    {
        [SerializeField, Min(1)] private int width = 10;
        [SerializeField, Min(1)] private int height = 10;
        [SerializeField, Min(0.01f)] private float cellSize = 1f;

        public int Width => width;
        public int Height => height;
        public float CellSize => cellSize;
    }

    [Serializable]
    public sealed class PathData
    {
        [SerializeField] private bool isClosed;

        // Cells are ordered from the start of the path to its end.
        // A closed path connects the last cell to the first without duplicating it.
        [SerializeField] private List<Vector2Int> cells = new List<Vector2Int>();

        public bool IsClosed => isClosed;
        public IReadOnlyList<Vector2Int> Cells => cells;
    }

    [Serializable]
    public sealed class BuoyNodeData
    {
        [SerializeField] private Vector2Int gridPosition;
        // Cardinal grid direction toward the receiving conveyor cell. Zero means unconfigured.
        [SerializeField] private Vector2Int outletDirection;
        [SerializeField] private List<BuoyColumnData> columns = new List<BuoyColumnData>
        {
            new BuoyColumnData()
        };

        public Vector2Int GridPosition => gridPosition;
        public Vector2Int OutletDirection => outletDirection;
        public Vector2Int OutletCell => gridPosition + outletDirection;
        public IReadOnlyList<BuoyColumnData> Columns => columns;
    }

    [Serializable]
    public sealed class BuoyColumnData
    {
        public const int DefaultBuoyCount = 5;

        [SerializeField] private ColumnElementType columnType = ColumnElementType.NormalPeg;
        [SerializeField, Min(0)] private int columnTypeCount;

        // An empty list means the column has no elements.
        [SerializeField] private List<ColumnElementData> elements = new List<ColumnElementData>();
        [SerializeField] private List<BuoyData> buoys = CreateDefaultBuoys();

        public ColumnElementType ColumnType => columnType;
        public int ColumnTypeCount => columnTypeCount;
        public IReadOnlyList<ColumnElementData> Elements => elements;
        public IReadOnlyList<BuoyData> Buoys => buoys;
        public int BuoyCount => buoys.Count;
        public static BuoyColumnData CreateEmpty() => new BuoyColumnData { buoys = new List<BuoyData>() };

        private static List<BuoyData> CreateDefaultBuoys()
        {
            var result = new List<BuoyData>(DefaultBuoyCount);
            for (int i = 0; i < DefaultBuoyCount; i++)
            {
                result.Add(new BuoyData());
            }

            return result;
        }
    }

    [Serializable]
    public sealed class BuoyData
    {
        // The editor assigns this code from ColorDataSO so palette colors can change safely.
        [SerializeField] private int colorCode;
        [SerializeField] private BuoyElementType buoyType = BuoyElementType.NormalBouy;
        [SerializeField, Min(0)] private int buoyTypeCount;
        [SerializeField] private List<BuoyElementData> elements = new List<BuoyElementData>();

        public int ColorCode => colorCode;
        public BuoyElementType BuoyType => buoyType;
        public int BuoyTypeCount => buoyTypeCount;
        public IReadOnlyList<BuoyElementData> Elements => elements;
    }

    [Serializable]
    public sealed class ColumnElementData
    {
        // Identifies a column element, such as ice or box.
        [SerializeField] private string elementId = string.Empty;

        public string ElementId => elementId;
    }

    [Serializable]
    public sealed class BuoyElementData
    {
        // Identifies a buoy element, such as hidden.
        [SerializeField] private string elementId = string.Empty;

        public string ElementId => elementId;
    }
}
