classDiagram
direction LR
LevelManager --> LevelDataSO : reads
LevelManager --> BoardManager : initializes
LevelManager --> ConveyorController : configures
BoardManager *-- BuoyStackHolderController
BoardManager *-- BuoyTransferController : ticks flights
BoardManager --> ConveyorController
BoardManager *-- StackQueueController
BoardManager --> StackQueueVisual
BoardManager --> StackQueueExit
LevelManager --> StackQueueVisual
LevelManager --> StackQueueExit
LevelManager --> BoardManager : queue failure to Lost
StackQueueController *-- BuoyStack : queue contents
StackQueueController *-- StackReservation
StackQueueController --> StackQueueVisual
StackQueueController --> ConveyorController : exit and reentry
StackQueueController --> BuoyTransferController : receive and export
StackQueueController --> InputSystem : bind queue taps
StackQueueController --> StackQueueExit : departure guard
StackReservation *-- PendingReceive
ConveyorBuoyGroup --> StackQueueExit : DepartureExit
StackQueueExit --> StackQueueController : trigger entry
BuoyStackHolderController *-- BuoyStackHolder
BuoyStackHolderController ..> BuoyStack : lazy factory
BuoyStackHolder *-- BuoyStack : visible slots
BuoyStackHolder o-- BuoyColumnData : pending queue
BuoyStackHolder --> BuoyStackHolderVisual
BuoyStackHolderVisual --> BuoyStackHolder : trigger detection
BuoyStackHolderVisual ..> ConveyorBuoyGroup : collider lookup
BuoyStackHolder --> BuoyTransferController
BuoyStack *-- Buoy
BuoyStack --> BuoyStackVisual
Buoy --> BuoyVisual
BuoyVisual --> BuoyColorConfig
BuoyStackVisual ..|> IInputReceiver
BuoyStackVisual --> InputSystem
InputSystem --> IInputReceiver : dispatches clicks
ConveyorController *-- ConveyorBuilder
ConveyorController *-- ConveyorBuoyGroup
MonoBehaviour <|-- ConveyorBuoyGroup
ConveyorBuoyGroup o-- Buoy : moving contents
ConveyorBuoyGroup --> BuoyStackHolder : departure exclusion
BuoyTransferController --> BuoyStack : landings
BuoyTransferController --> ConveyorBuoyGroup : launch and claim
BuoyTransferController --> ConveyorController : admission and removal
ConveyorBuilder ..> BoardCoordinates
ConveyorController ..> BoardCoordinates
BuoyStackHolderController ..> BoardCoordinates
LevelDataSO *-- BoardData
LevelDataSO *-- PathData
LevelDataSO *-- BuoyNodeData
LevelDataSO --> ColorDataSO
BuoyNodeData *-- BuoyColumnData
BuoyColumnData *-- BuoyData
BuoyColumnData *-- ColumnElementData
BuoyData *-- BuoyElementData
ColorDataSO *-- ColorEntryData
BuoyColorConfig *-- ColorMaterialEntry
BuoyTransferController *-- Transfer
BuoyTransferController *-- ReceiveTransfer
Transfer *-- Flight
ReceiveTransfer *-- ReceiveFlight
ConveyorController *-- PathMoveSlot
ConveyorController *-- GroupPosition
ConveyorController *-- EnterRequest
BoardManager *-- MaxBuoyCounterTxt
MaxBuoyCounterTxt --> ConveyorController : GroupCountChanged
LevelDataSO *-- MaxBuoyCounterTxtData
Outline *-- ListVector3
